--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Cuesheet Processor (CueProc) 1.9 alternative 1.10
+Cuesheet Processor (CueProc) 1.9 alternative 1.10A
 
 copyright (c) 2009 by rin_ne
