--- a/README
+++ b/README
@@ -8,7 +8,7 @@ copyright (c) 2009 by rin_ne
 
 
 
-Original cueproc README is below:
+cueproc's original README is below:
 ----
 
                     Cuesheet Processor (CueProc) 1.9                  
